# patchly

./: .gitignore  OVERVIEW.md  README.md  setup.cfg  setup.py  tmp.py  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: inference_chunk.py  pytorch_inference.py
legacy/: test_basic_grid_sampler_old.py
misc/: gaussian_kernel_comparisons.py  tmp.py
patchly/: .pre-commit-config.yaml  __init__.py  aggregator.py  array_like.py  sampler.py  utils.py
patchly/.github/workflows/: test_and_deploy.yml
patchly/tests/test_adaptive/: test_adaptive_aggregator.py  test_adaptive_chunk_aggregator.py  test_adaptive_grid_sampler.py
patchly/tests/test_crop/: test_crop_grid_sampler.py
patchly/tests/test_edge/: test_edge_aggregator.py  test_edge_chunk_aggregator.py  (+1 more)
samplify/: __init__.py  aggregator.py  array_like.py  population.py  sampler.py  utils.py
tests/: test_adaptive_grid_sampler.py  test_basic_grid_sampler.py  test_chunk_grid_aggregator.py  test_chunk_grid_sampler.py  test_chunked_grid_sampler.py  test_crop_grid_sampler.py  test_grid_aggregator.py  test_grid_sampler.py
tests/test_adaptive/: test_adaptive_aggregator.py  test_adaptive_chunk_aggregator.py  test_adaptive_grid_sampler.py
tests/test_chunking/: test_chunk_aggregator.py
tests/test_crop/: test_crop_grid_sampler.py
tests/test_edge/: test_chunk_edge_aggregator.py  test_chunk_edge_sampler.py  test_edge_aggregator.py  test_edge_chunk_aggregator.py  test_edge_sampler.py
tests/test_squeeze/: test_squeeze_aggregator.py  test_squeeze_chunk_aggregator.py  test_squeeze_sampler.py
(+3 files in other folders)
