[metadata]
name = patchly
version = attr: patchly.__version__
description = A grid sampler for N-dimensional images
long_description = file: README.md
long_description_content_type = text/markdown

author = Karol Gotkowski
author_email = karol.gotkowski@dkfz.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy >= 1.24.1
python_requires = >=3.8
include_package_data = True
; package_dir =
;     =patchly

# add your package requirements here

; [options.packages.find]
; where = patchly

[options.extras_require]
testing =
    tox
    numpy >= 1.24.1, < 2.0.0
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    zarr
    torch

[options.package_data]
* = *.yaml
